Fix content alignment in BackgroundImage.scss

--- a/swimgoals_frontend/src/app/styles/BackgroundImage.scss
+++ b/swimgoals_frontend/src/app/styles/BackgroundImage.scss
@@ -4,7 +4,7 @@
     margin: 0;
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    justify-content: flex-start;
     height: 100vh;
     width: 100%;
     color: variables.$white;
